--- a/pom.xml
+++ b/pom.xml
@@ -27,16 +27,11 @@
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
-          <archive>
-            <manifest>
-              <mainClass>com.github.alechenninger.chronicler.toggl.ChroniclerToggl</mainClass>
-            </manifest>
-          </archive>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
           <appendAssemblyId>false</appendAssemblyId>
-          <finalName>${artifactId}-${version}-standalone</finalName>
+          <finalName>${project.artifactId}-${project.version}-standalone</finalName>
           <attach>false</attach>
         </configuration>
         <executions>
@@ -79,6 +74,12 @@
       <groupId>ch.simas.jtoggl</groupId>
       <artifactId>jtoggl-api</artifactId>
       <version>1.0.2-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
