Add javax mail API sneaky transitive dependency

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- Required by jtoggl-api -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+      <version>1.5.5</version>
+    </dependency>
   </dependencies>
 
 </project>
